--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -5,5 +5,5 @@
 
 // Стили для файла с примером HTML-фрагмента
 @import './example';
-@import "./base/general-components";
-
+@import './base/general-components';
+@import './footer';
