Убрал скрол боди модалки,  сделал кнопки в форме

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -7,14 +7,14 @@
       </h1>
       <ul class="buttons-hero list">
         <li>
-          <button href="#product" type="button" class="button-product">
+          <a href="#product" class="button-product link">
             Products
-          </button>
+          </a>
         </li>
         <li>
-          <button href="#made" type="button" class="button-made">
+          <a href="#made" class="button-made link">
             How it’s made?
-          </button>
+          </a>
         </li>
       </ul>
       <picture class="picture-milk">
