--- a/src/partials/modal-window.html
+++ b/src/partials/modal-window.html
@@ -68,7 +68,7 @@
               <a class="checkbox-link" href="">Agreement conditions</a>
             </label>
         
-            <button class="form-btn">Order</button>
+            <button class="form-btn btn-buy" disabled>Order</button>
           </form>
         
         </form>
