--- a/src/partials/section-products.html
+++ b/src/partials/section-products.html
@@ -1,4 +1,4 @@
-<section class="section-products">
+<section class="section-products" id="product" >
     <div class="container container-products">
         <p class="section-products__text">100% natural</p>
         <h2 class="section-products__title">products</h2>
