--- a/src/sass/layouts/_hero.scss
+++ b/src/sass/layouts/_hero.scss
@@ -157,6 +157,10 @@
 }
 
 .button-product {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
   height: 24px;
   width: 62px;
   font-size: 16px;
@@ -188,6 +192,11 @@
 }
 
 .button-made {
+display: flex;
+align-items: center;
+justify-content: center;
+
+
   height: 24px;
   width: 82px;
 
