--- a/src/sass/layouts/_modal-window.scss
+++ b/src/sass/layouts/_modal-window.scss
@@ -7,7 +7,10 @@
   background-color: rgba(255, 245, 246, 0.7);
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
   z-index: 10;
+
   overflow-y: scroll;
+  opacity: 1;
+  transition: all 250ms $bezier-page;
 }
 
 .backdrop.is-hidden {
