--- a/src/sass/layouts/_order-form.scss
+++ b/src/sass/layouts/_order-form.scss
@@ -147,15 +147,17 @@
   display: block;
   margin-right: auto;
   margin-left: auto;
-  cursor: pointer;
   font-size: 18px;
   padding: 5px 10px;
-  border-radius: 5px;
-  color: $background-header-hero;
+  color: $primary-white-color;
   background-color: $accent-color;
   font-weight: 700;
+  min-width: 209px;
 }
 
+@media screen and (max-width: 767px) {
+
+}
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   .form-btn {
     font-size: 22px;
@@ -170,11 +172,11 @@
   }
 }
 
-.form-btn:hover,
-.form-btn:focus {
-  color: $background-header-hero;
-  background-color: $accent-color;
-}
+// .form-btn:hover,
+// .form-btn:focus {
+//   color: $background-header-hero;
+//   background-color: $accent-color;
+// }
 
 .form-btn:disabled {
   color: grey;
