--- a/src/sass/layouts/_section-products.scss
+++ b/src/sass/layouts/_section-products.scss
@@ -77,6 +77,8 @@
   border-radius: 24px;
   letter-spacing: 0.04em;
   color: $primary-white-color;
+  transition-duration: 250ms;
+  transition-timing-function: $bezier-page;
 
   @media screen and (min-width: 768px) {
     padding-top: 150px;
@@ -190,6 +192,13 @@
       height: 105px;
       font-size: 16px;
     }
+  }
+
+  &:hover,
+  &:focus {
+    transform: scale(1.25);
+    z-index: 2;
+    box-shadow: 0 8px 30px rgba(212, 20, 67, 0.1);
   }
 }
 
