--- a/src/sass/layouts/_modal-window.scss
+++ b/src/sass/layouts/_modal-window.scss
@@ -23,12 +23,12 @@
 }
 
 .modal {
-  /*  background-image: linear-gradient(
+    background-image: linear-gradient(
       to right,
       rgba(247, 193, 205, 0.5),
       rgba(247, 193, 205, 0.5)
     ),
-    url(../images/modal/ice-cream-car.png); */
+    url(../images/modal/ice-cream-car.png); 
   background-color: $background-header-hero;
   background-position: center;
   background-size: cover;
