--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -26,12 +26,12 @@
             </ul>
             <div class="phone">
                 <p>Feel free to contact<span class="w">w</span> </p>
-                <a href="" href="tel:+61383766284">+61 (0) 383 766 284</a>
+                <a href="tel:+61383766284">+61 (0) 383 766 284</a>
             </div>
         </div>
     </div>
 
     <div class="line"></div>
 
-    <p class="finish-text">&copy; 2019 - IceCream. All Rights Reserved.</p>
+    <p class="finish-text">&copy; 2020 - IceCream. All Rights Reserved.</p>
 </div>
