--- a/src/partials/section-made.html
+++ b/src/partials/section-made.html
@@ -1,9 +1,11 @@
 <section class="made" id="made">
   <div class="container">
-    <p class="made-second-title animate__animated animate__rubberBand">
+    <p class="made-second-title animate__animated animate__heartBeat">
       tradition and love
     </p>
-    <h2 class="made-title animate__animated animate__pulse">how it’s made?</h2>
+    <h2 class="made-title animate__animated animate__heartBeat">
+      how it’s made?
+    </h2>
     <div class="made-flex">
       <div class="made-item">
         <picture>
