--- a/src/sass/layouts/_modal-window.scss
+++ b/src/sass/layouts/_modal-window.scss
@@ -25,10 +25,10 @@
 .modal {
     background-image: linear-gradient(
       to right,
-      rgba(247, 193, 205, 0.5),
-      rgba(247, 193, 205, 0.5)
+      rgba(247, 193, 205, 0.7),
+      rgba(247, 193, 205, 0.7)
     ),
-    url(../images/modal/ice-cream-car.png); 
+    url(../images/modal/ice-cream-car.png);
   background-color: $background-header-hero;
   background-position: center;
   background-size: cover;
@@ -38,10 +38,6 @@
   left: 50%;
   transform: translate(-50%, -50%) scale(0.8);
 
-  width: 100%;
-  max-height: 100%;
-
-  // background-color: #fff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 30px;
@@ -50,18 +46,13 @@
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   @include for-size(mobile-only) {
-    /* min-width: 100%; */
-    // max-width: 320px;
+     width: 100%; 
+     max-width: 320px;
   }
 
   @media (max-width: 1199px) {
     overflow-y: scroll;
   }
-
-  /* @include for-size(desktop) {
-    min-width: 528px;
-    min-height: 581px;
-  } */
 }
 
 .modal button.close {
