--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,7 +1,7 @@
 <header class="page-header">
   <div class="page-header__container">
     <a class="page-header__logo link" href="./">
-      <span>
+      <span class="page-header__logo-icon">
         <img
           alt="logo"
           src="./images/hero/logo-s/logo.png"
