--- a/src/sass/layouts/_header.scss
+++ b/src/sass/layouts/_header.scss
@@ -7,10 +7,25 @@
     align-items: center;
   }
 
-  &__logo-title {
-    margin-left: 20px;
+  &__logo-icon {
+    display: block;
+    margin-right: 20px;
 
-    @include fonts(28px, 400, 1, 0.04em);
+    @include for-size(desktop) {
+      position: absolute;
+      top: 37px;
+      left: -7%;
+    }
+  }
+
+  &__logo.link {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  &__logo-title {
+    display: block;
+    @include fonts(26px, 400, 1.12, 0.04em);
     font-family: $second-font;
     text-transform: uppercase;
 
@@ -40,8 +55,8 @@
     }
 
     @media screen and (min-width: 1200px) {
-      max-width: 1200px;
-      padding: 37px 46px 0px;
+      max-width: 1050px;
+      padding: 37px 0 0;
     }
   }
 
@@ -58,7 +73,10 @@
   display: flex;
   justify-content: center;
   align-items: center;
+
+  min-width: 160px;
   height: 44px;
+
   font-weight: bold;
   font-size: 16px;
   line-height: 21px;
@@ -79,8 +97,7 @@
     display: none;
   }
 
-  @media screen and (min-width: 768px) {
-    min-width: 160px;
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
     margin-left: 30px;
   }
 
