--- a/src/sass/layouts/_hero.scss
+++ b/src/sass/layouts/_hero.scss
@@ -24,6 +24,7 @@
   @media screen and (min-width: 1200px) {
     max-width: 1200px;
     height: 665px;
+    padding: 0 75px;
   }
 }
 
@@ -73,7 +74,7 @@
   }
 
   @media screen and (min-width: 1200px) {
-    left: 46%;
+    left: 46.6%;
     width: 236px;
   }
 }
@@ -100,8 +101,8 @@
   }
 
   @include for-size(desktop) {
-    top: -10.5%;
-    right: -82%;
+    top: -10%;
+    right: -78%;
 
     width: 538px;
     height: 538px;
@@ -155,7 +156,6 @@
     margin-right: 8px;
   }
 }
-
 .button-product {
   display: flex;
   align-items: center;
@@ -176,8 +176,8 @@
   // transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: all 0.2s ease-in-out;
 
-  @media screen and (min-width: 1199px) {
-    width: 138px;
+  @media screen and (min-width: 1200px) {
+    width: 104px;
     height: 40px;
 
     font-size: 14px;
@@ -192,13 +192,12 @@
 }
 
 .button-made {
-display: flex;
-align-items: center;
-justify-content: center;
-
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
   height: 24px;
-  width: 82px;
+  width: 83px;
 
   font-size: 16px;
   line-height: 21px;
@@ -213,7 +212,7 @@ justify-content: center;
   // transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: all 0.2s ease-in-out;
 
-  @media screen and (min-width: 1199px) {
+  @media screen and (min-width: 1200px) {
     width: 138px;
     height: 40px;
 
@@ -243,6 +242,12 @@ justify-content: center;
   @media screen and (min-width: 767px) and (max-width: 1199px) {
     width: 124px;
     padding-top: 19px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    position: absolute;
+    bottom: 7.3%;
+    left: 3%;
   }
 }
 
@@ -297,8 +302,8 @@ justify-content: center;
   }
 
   @media screen and (min-width: 1200px) {
-    bottom: 60px;
-    left: 266px;
+    bottom: 70px;
+    left: 231px;
   }
 
   .info-text {
@@ -405,7 +410,7 @@ justify-content: center;
   @media screen and (min-width: 1200px) {
     width: 293px;
     height: 232px;
-    right: 55px;
+    right: 5.3%;
   }
 }
 
@@ -452,7 +457,7 @@ justify-content: center;
 
 .decorate {
   position: absolute;
-  top: 94px;
+  top: 96px;
   right: 44px;
 
   width: 51px;
@@ -464,7 +469,7 @@ justify-content: center;
 
   @media screen and (min-width: 1200px) {
     top: 156px;
-    right: 57px;
+    right: 6.1%;
 
     width: 92px;
     height: 168px;
