изменяет увеличение картинок на моб и таблет

--- a/src/partials/section-pictures.html
+++ b/src/partials/section-pictures.html
@@ -1,6 +1,6 @@
 <section class="container section-pictures">
   <div class="pictures-container">
-    <div class="img-one">
+    <div class="img-one img-right">
       <picture>
         <source
           srcset="./images/pictures/green-ice-1200.jpg 1x"
@@ -197,7 +197,7 @@
         />
       </picture>
     </div>
-    <div class="img-one">
+    <div class="img-one img-left">
       <picture>
         <source
           srcset="
