--- a/src/sass/layouts/_modal-window.scss
+++ b/src/sass/layouts/_modal-window.scss
@@ -61,21 +61,22 @@
   justify-content: center;
   align-items: center;
 
-  top: 8px;
-  right: 8px;
+  top: 15px;
+  right: 15px;
   width: 30px;
   height: 30px;
   border-radius: 50%;
 
   cursor: pointer;
 
-  background-color: #ffffff;
+  background-color: $primary-white-color;
   border: 1px solid rgba(255, 245, 246, 1);
   fill: $accent-color;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   &:hover,
   &:focus {
-    fill: $primary-accent-color;
+    background-color: $accent-color;
+    fill: $primary-white-color;
   }
 }
