Добавляет кнопку, и current menu

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -25,6 +25,7 @@
 @import './layouts/modal-window';
 @import './layouts/order-form';
 @import './components/ice-shine';
+@import './components/button-to-top';
 
 // @import "./base/common";
 // @import "./base/common";
