--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -30,6 +30,9 @@
             </div>
         </div>
     </div>
+    <a class="scrollToTopBtn">
+        
+    </a>
 
     <div class="line"></div>
 
