--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -14,7 +14,7 @@
     <nav class="page-header__nav">
       <ul class="list">
         <li class="item">
-          <a class="nav-link link" href="">Home</a>
+          <a class="nav-link link current" href="">Home</a>
         </li>
         <li class="item">
           <a class="nav-link link" href="">About us</a>
