--- a/src/partials/mob-menu.html
+++ b/src/partials/mob-menu.html
@@ -34,7 +34,7 @@
   <nav class="nav">
     <ul class="nav__list list">
       <li class="nav__item">
-        <a class="nav__link" href="">Home</a>
+        <a class="nav__link current" href="">Home</a>
       </li>
       <li class="nav__item">
         <a class="nav__link" href="">About us</a>
