--- a/src/sass/layouts/_section-made.scss
+++ b/src/sass/layouts/_section-made.scss
@@ -172,7 +172,9 @@
 
   &:hover,
   &:focus {
-    background: #ecebeb;
+    color: $accent-color;
+    transform: scale(1.1);
+    box-shadow: 10px 10px 99px 6px rgb(248, 31, 31);
   }
   @media screen and (min-width: 480px) and (max-width: 767px) {
     margin-right: auto;
