--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,6 +1,6 @@
 <header class="page-header">
   <div class="page-header__container">
-    <a class="page-header__logo link" href="./">
+    <a class="page-header__logo link blink-1" href="./">
       <span class="page-header__logo-icon">
         <img
           alt="logo"
@@ -14,19 +14,19 @@
     <nav class="page-header__nav">
       <ul class="list">
         <li class="item">
-          <a class="nav-link link current" href="">Home</a>
+          <a class="nav-link link current" href="./">Home</a>
         </li>
         <li class="item">
-          <a class="nav-link link" href="">About us</a>
+          <a class="nav-link link" href="#about">About us</a>
         </li>
         <li class="item">
-          <a class="nav-link link" href="">How it's made?</a>
+          <a class="nav-link link" href="#made">How it's made?</a>
         </li>
         <li class="item">
-          <a class="nav-link link" href="">Our products</a>
+          <a class="nav-link link" href="#product">Our products</a>
         </li>
         <li class="item">
-          <a class="nav-link link" href="">Contact</a>
+          <a class="nav-link link" href="#contact">Contact</a>
         </li>
       </ul>
     </nav>
