--- a/src/partials/mob-menu.html
+++ b/src/partials/mob-menu.html
@@ -34,19 +34,19 @@
   <nav class="nav">
     <ul class="nav__list list">
       <li class="nav__item">
-        <a class="nav__link current" href="">Home</a>
+        <a class="nav__link current" href="./">Home</a>
       </li>
       <li class="nav__item">
-        <a class="nav__link" href="">About us</a>
+        <a class="nav__link" href="#about">About us</a>
       </li>
       <li class="nav__item">
-        <a class="nav__link" href="">How it's made?</a>
+        <a class="nav__link" href="#made">How it's made?</a>
       </li>
       <li class="nav__item">
-        <a class="nav__link" href="">Our products</a>
+        <a class="nav__link" href="#product">Our products</a>
       </li>
       <li class="nav__item">
-        <a class="nav__link" href="">Contact</a>
+        <a class="nav__link" href="#contact">Contact</a>
       </li>
     </ul>
   </nav>
