--- a/src/partials/section-features.html
+++ b/src/partials/section-features.html
@@ -1,4 +1,4 @@
-<section class="features">
+<section class="features" id="about">
   <div class="container">
     <ul class="list features-flex">
       <li class="features-blok">
