--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -2,8 +2,8 @@
 
     <div class=" container flexbox">
         <div class="text-title">
-            <p class="accent-text">homemade ice cream made</p>
-            <h2 class="accent-title">with passion</h2>
+            <p class="accent-text animate__animated">homemade ice cream made</p>
+            <h2 class="accent-title animate__animated">with passion</h2>
         </div>
 
         <div class="social-phone">
@@ -24,7 +24,7 @@
                     </svg>
                    </a></li>
             </ul>
-            <div class="phone">
+            <div class="phone" id="contact">
                 <p>Feel free to contact<span class="w">w</span> </p>
                 <a href="tel:+61383766284">+61 (0) 383 766 284</a>
             </div>
