--- a/src/partials/section-products.html
+++ b/src/partials/section-products.html
@@ -1,7 +1,7 @@
 <section class="section-products" id="product" >
     <div class="container container-products">
-        <p class="section-products__text">100% natural</p>
-        <h2 class="section-products__title">products</h2>
+        <p class="section-products__text animate__animated">100% natural</p>
+        <h2 class="section-products__title animate__animated">products</h2>
         <ul class="section-products__list list">
             <li class="product-card product-card--icecream">
                 <picture>
