--- a/src/sass/layouts/_header.scss
+++ b/src/sass/layouts/_header.scss
@@ -157,3 +157,31 @@
   color: #d41443;
   font-size: 20px;
 }
+.blink-1:hover,
+.blink-1:focus {
+	-webkit-animation: blink-1 0.6s both;
+	        animation: blink-1 0.6s both;
+}
+
+ @-webkit-keyframes blink-1 {
+  0%,
+  50%,
+  100% {
+    opacity: 1;
+  }
+  25%,
+  75% {
+    opacity: 0;
+  }
+}
+@keyframes blink-1 {
+  0%,
+  50%,
+  100% {
+    opacity: 1;
+  }
+  25%,
+  75% {
+    opacity: 0;
+  }
+}
