--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -109,7 +109,7 @@
       </picture>
       <!-- это свг для анимации -->
 
-      <svg width="60" height="60" viewBox="0 0 100 100" id="onewhite">
+      <!-- <svg width="60" height="60" viewBox="0 0 100 100" id="onewhite">
         <g class="group" opacity="0.8">
           <g class="large">
             <path
@@ -155,7 +155,6 @@
           </g>
         </g>
       </svg>
-
       <svg width="70" height="70" viewBox="0 0 100 100" id="threewhite">
         <g class="group" opacity="0.8">
           <g class="large">
@@ -179,7 +178,6 @@
           </g>
         </g>
       </svg>
-
       <svg width="70" height="70" viewBox="0 0 100 100" id="oneph">
         <g class="group" opacity="0.8">
           <g class="large">
@@ -203,7 +201,6 @@
           </g>
         </g>
       </svg>
-
       <svg width="70" height="70" viewBox="0 0 100 100" id="twoph">
         <g class="group" opacity="0.8">
           <g class="large">
@@ -250,7 +247,6 @@
           </g>
         </g>
       </svg>
-
       <svg width="70" height="70" viewBox="0 0 100 100" id="oneorange">
         <g class="group" opacity="0.8">
           <g class="large">
@@ -274,7 +270,6 @@
           </g>
         </g>
       </svg>
-
       <svg width="70" height="70" viewBox="0 0 100 100" id="twoorange">
         <g class="group" opacity="0.8">
           <g class="large">
@@ -481,7 +476,7 @@
             />
           </g>
         </g>
-      </svg>
+      </svg> -->
       <!-- Закончились свг для анимации -->
     </div>
     <div class="info-milk">
