--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -109,7 +109,7 @@
       </picture>
       <!-- это свг для анимации -->
 
-      <!-- <svg width="60" height="60" viewBox="0 0 100 100" id="onewhite">
+      <svg width="60" height="60" viewBox="0 0 100 100" id="onewhite">
         <g class="group" opacity="0.8">
           <g class="large">
             <path
@@ -120,7 +120,7 @@
             />
           </g>
           <g class="large-2" transform="rotate(45)">
-            <use xlink:href="#large" />
+            <use href="#large" />
           </g>
           <g class="small">
             <path
@@ -143,7 +143,7 @@
             />
           </g>
           <g class="large-2" transform="rotate(45)">
-            <use xlink:href="#large" />
+            <use href="#large" />
           </g>
           <g class="small">
             <path
@@ -166,7 +166,7 @@
             />
           </g>
           <g class="large-2" transform="rotate(45)">
-            <use xlink:href="#large" />
+            <use href="#large" />
           </g>
           <g class="small">
             <path
@@ -189,7 +189,7 @@
             />
           </g>
           <g class="large-2" transform="rotate(45)">
-            <use xlink:href="#large" />
+            <use href="#large" />
           </g>
           <g class="small">
             <path
@@ -212,7 +212,7 @@
             />
           </g>
           <g class="large-2" transform="rotate(45)">
-            <use xlink:href="#large" />
+            <use href="#large" />
           </g>
           <g class="small">
             <path
@@ -235,7 +235,7 @@
             />
           </g>
           <g class="large-2" transform="rotate(45)">
-            <use xlink:href="#large" />
+            <use href="#large" />
           </g>
           <g class="small">
             <path
@@ -258,7 +258,7 @@
             />
           </g>
           <g class="large-2" transform="rotate(45)">
-            <use xlink:href="#large" />
+            <use href="#large" />
           </g>
           <g class="small">
             <path
@@ -281,7 +281,7 @@
             />
           </g>
           <g class="large-2" transform="rotate(45)">
-            <use xlink:href="#large" />
+            <use href="#large" />
           </g>
           <g class="small">
             <path
@@ -304,7 +304,7 @@
             />
           </g>
           <g class="large-2" transform="rotate(45)">
-            <use xlink:href="#large" />
+            <use href="#large" />
           </g>
           <g class="small">
             <path
@@ -327,7 +327,7 @@
             />
           </g>
           <g class="large-2" transform="rotate(45)">
-            <use xlink:href="#large" />
+            <use href="#large" />
           </g>
           <g class="small">
             <path
@@ -350,7 +350,7 @@
             />
           </g>
           <g class="large-2" transform="rotate(45)">
-            <use xlink:href="#large" />
+            <use href="#large" />
           </g>
           <g class="small">
             <path
@@ -373,7 +373,7 @@
             />
           </g>
           <g class="large-2" transform="rotate(45)">
-            <use xlink:href="#large" />
+            <use href="#large" />
           </g>
           <g class="small">
             <path
@@ -396,7 +396,7 @@
             />
           </g>
           <g class="large-2" transform="rotate(45)">
-            <use xlink:href="#large" />
+            <use href="#large" />
           </g>
           <g class="small">
             <path
@@ -419,7 +419,7 @@
             />
           </g>
           <g class="large-2" transform="rotate(45)">
-            <use xlink:href="#large" />
+            <use href="#large" />
           </g>
           <g class="small">
             <path
@@ -442,7 +442,7 @@
             />
           </g>
           <g class="large-2" transform="rotate(45)">
-            <use xlink:href="#large" />
+            <use href="#large" />
           </g>
           <g class="small">
             <path
@@ -465,7 +465,7 @@
             />
           </g>
           <g class="large-2" transform="rotate(45)">
-            <use xlink:href="#large" />
+            <use href="#large" />
           </g>
           <g class="small">
             <path
@@ -476,7 +476,7 @@
             />
           </g>
         </g>
-      </svg> -->
+      </svg>
       <!-- Закончились свг для анимации -->
     </div>
     <div class="info-milk">
