--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -109,7 +109,7 @@
       </picture>
       <!-- это свг для анимации -->
 
-      <svg width="60" height="60" viewBox="0 0 100 100" id="onewhite">
+      <!-- <svg width="60" height="60" viewBox="0 0 100 100" id="onewhite">
         <g class="group" opacity="0.8">
           <g class="large">
             <path
@@ -476,7 +476,7 @@
             />
           </g>
         </g>
-      </svg>
+      </svg> -->
       <!-- Закончились свг для анимации -->
     </div>
     <div class="info-milk">
