--- a/src/sass/layouts/_section-made.scss
+++ b/src/sass/layouts/_section-made.scss
@@ -170,6 +170,8 @@
   background-color: $primary-white-color;
   cursor: pointer;
 
+  transition: all 250ms $bezier-page;
+
   &:hover,
   &:focus {
     color: $accent-color;
@@ -200,16 +202,10 @@
   right: 28px;
   transform: translateY(-50%) scale(1.3);
   fill: $accent-color;
-  // transition: fill 250ms $bezier-page;
-
-  // .made-button:hover &,
-  // .made-button:focus & {
-  //   fill: $accent-color;
-  // }
 }
 
 .anim-show {
-  transform: translate(120%);
+  transform: translateY(120%);
   opacity: 0;
   transition: all 0.8s $bezier-page 0s;
 }
