--- a/src/sass/layouts/_footer.scss
+++ b/src/sass/layouts/_footer.scss
@@ -64,6 +64,7 @@
   align-items: center;
   background-color: $secondary-accent-color;
   border-radius: 50%;
+  transition: background-color 250ms $bezier-page;
   &:hover,
   &:focus {
     background-color: $accent-color;
@@ -116,6 +117,7 @@
   font-weight: bold;
   font-size: 12px;
   line-height: 1.833;
+  transition: font-size 250ms $bezier-page;
   @media screen and (min-width: 768px) and (max-width: 1199px) {
     font-size: 14px;
   }
