fixed ice shaker

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -102,6 +102,7 @@
         />
 
         <img
+          class="shake"
           src="./images/hero/ice-s/ice-mob.png"
           alt="photo very tasty icecream"
           width="236"
