restore the button scroll to top

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,6 +1,6 @@
 <section class="section-hero">
   <div class="container-hero container">
-    <div class="title-hero">
+    <div class="title-hero">т
       <h1>
         <span class="title-hero-white">ice cream made with</span>
         <span class="title-hero-rose">passion</span>
